Fixed some of the issues detected by the Lighthouse audit

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Star Wars Countdown is a set of countdowns to various Star Wars related events."/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>glyphicons/style.css">
     <title>Star Wars Countdown</title>
